ROX-2189: Setup a client CA using roxctl in k8s-tests and verify its presence (stackrox/rox#2688)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -969,8 +969,17 @@ jobs:
 
       - *deployGKE
       - *setupCIMonitoring
+
+      - *setupClientTLSCerts
+
       - *waitForAPI
       - *waitForSensorK8s
+
+      - run:
+          name: Set up client CA auth provider
+          command: |
+            roxctl -e "$API_ENDPOINT" -p "$ROX_PASSWORD" \
+              central userpki create test-userpki -r None -c "$CLIENT_CA_PATH"
 
       - run:
           name: API tests
