ROX-2622: Add "ServiceCert" token authentication mechanism (stackrox/rox#2680)

--- a/image/templates/kubernetes/kubectl/sensor.yaml
+++ b/image/templates/kubernetes/kubectl/sensor.yaml
@@ -55,6 +55,10 @@ spec:
           runAsNonRoot: true
           readOnlyRootFilesystem: true
         env:
+        {{ range $var, $value := .EnvVars -}}
+        - name: {{ $var }}
+          value: {{ jsonquote $value }}
+        {{ end }}
         - name: {{.PublicEndpointEnv}}
           value: {{.PublicEndpoint}}
         - name: {{.ClusterIDEnv}}
