Rename scanner init to entrypoint.sh (stackrox/rox#2686)
* Rename the scanner init to entrypoint.sh, to help protect from bugs like those seen in #customer-softlayer.

--- a/image/templates/kubernetes/helm/scannerchart/templates/deployment.yaml
+++ b/image/templates/kubernetes/helm/scannerchart/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
         - name: CLAIR_ARGS
           value: "-insecure-tls"
         command:
-        - /init
+        - /entrypoint.sh
         - /clairify
         imagePullPolicy: Always
         ports:
