ROX-2630: Propagate additional CAs to sensor bundle (and mount them in sensor) (stackrox/rox#2700)

--- a/image/Dockerfile_rhel
+++ b/image/Dockerfile_rhel
@@ -21,7 +21,7 @@ COPY ./bin/migrator /stackrox/
 COPY ./bin/central /stackrox/
 COPY ./bin/compliance /stackrox/
 COPY ./bin/roxctl* /assets/downloads/cli/
-COPY ./bin/kubernetes-sensor /stackrox/
+COPY ./bin/kubernetes-sensor /stackrox/bin/
 COPY ./static-bin/* /stackrox/
 COPY ./restricted-ui /stackrox/ui
 COPY --from=data /stackrox-data.tgze /stackrox/
