--- a/image/templates/kubernetes/kubectl/sensor.yaml
+++ b/image/templates/kubernetes/kubectl/sensor.yaml
@@ -75,6 +75,9 @@ spec:
         - name: certs
           mountPath: /run/secrets/stackrox.io/certs/
           readOnly: true
+        - name: additional-ca-volume
+          mountPath: /usr/local/share/ca-certificates/
+          readOnly: true
       {{if .MonitoringEndpoint}}
       - name: telegraf
         image: {{.Image}}
@@ -120,6 +123,10 @@ spec:
             path: key.pem
           - key: ca.pem
             path: ca.pem
+      - name: additional-ca-volume
+        secret:
+          secretName: additional-ca-sensor
+          optional: true
       - name: varlog
         emptyDir: {}
       {{if .MonitoringEndpoint}}
