Add blank OpenShift node selector to stackrox namespace and apply anti-affinity to infra and master nodes (stackrox/rox#2707)

--- a/image/templates/kubernetes/helm/monitoringchart/templates/deployment.yaml
+++ b/image/templates/kubernetes/helm/monitoringchart/templates/deployment.yaml
@@ -24,6 +24,28 @@ spec:
       {{if .Values.nodeSelector -}}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
+      {{else if eq .Values.clusterType "OPENSHIFT_CLUSTER"}}
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 25
+              preference:
+                matchLabels:
+                  node-role.kubernetes.io/compute: "true"
+            - weight: 75
+              preference:
+                matchExpressions:
+                  - key: node-role.kubernetes.io/infra
+                    operator: NotIn
+                    values:
+                    - "true"
+            - weight: 100
+              preference:
+                matchExpressions:
+                  - key: node-role.kubernetes.io/master
+                    operator: NotIn
+                    values:
+                    - "true"
       {{- end}}
       serviceAccount: monitoring
       containers:
