--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -219,7 +219,7 @@ required = ["golang.org/x/tools/go/ast/astutil", "golang.org/x/tools/go/analysis
 
 [[constraint]]
   name = "github.com/dgraph-io/badger"
-  revision = "28ef9bfd243809d6f4abc7dfa1ad92984eac9b66"
+  version = "v1.6.0"
 
 [[constraint]]
   name = "github.com/PagerDuty/go-pagerduty"
