--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -950,7 +950,7 @@ jobs:
     <<: *defaults
     environment:
       - MONITORING_SUPPORT: true
-      - SCANNER_SUPPORT: false
+      - SCANNER_SUPPORT: true
       - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
       - LOAD_BALANCER: lb
       - ROX_SCOPED_ACCESS_CONTROL: true
@@ -1079,7 +1079,7 @@ jobs:
       - RUNTIME_SUPPORT: ebpf
       - GCP_IMAGE_TYPE: "COS"
       - MONITORING_SUPPORT: true
-      - SCANNER_SUPPORT: false
+      - SCANNER_SUPPORT: true
       - ROX_K8S_RBAC: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SCOPED_ACCESS_CONTROL: true
@@ -1177,7 +1177,7 @@ jobs:
       - LOCAL_PORT: 443
       - RUNTIME_SUPPORT: kernel-module
       - MONITORING_SUPPORT: true
-      - SCANNER_SUPPORT: false
+      - SCANNER_SUPPORT: true
       - ROX_K8S_RBAC: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SCOPED_ACCESS_CONTROL: true
@@ -1384,7 +1384,7 @@ jobs:
     <<: *defaults
     environment:
       - MONITORING_SUPPORT: true
-      - SCANNER_SUPPORT: false
+      - SCANNER_SUPPORT: true
       - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
       - STORAGE: pvc
       - LOAD_BALANCER: lb
@@ -1543,7 +1543,7 @@ jobs:
       - LOCAL_PORT: 8000
       - RUNTIME_SUPPORT: ebpf
       - MONITORING_SUPPORT: true
-      - SCANNER_SUPPORT: false
+      - SCANNER_SUPPORT: true
       - INFLUXDB_URL: "https://influxdb.monitoring.ci.rox.systems"
       - ROX_K8S_RBAC: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
@@ -1737,7 +1737,7 @@ jobs:
       - LOCAL_PORT: 8000
       - RUNTIME_SUPPORT: kernel-module
       - MONITORING_SUPPORT: true
-      - SCANNER_SUPPORT: false
+      - SCANNER_SUPPORT: true
       - INFLUXDB_URL: "https://influxdb.monitoring.ci.rox.systems"
       - ROX_K8S_RBAC: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
