--- a/image/templates/kubernetes/helm/scannerv2chart/templates/secrets.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/secrets.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.appName }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.appName }}
+    app.kubernetes.io/name: stackrox
 type: Opaque
 stringData:
   ANCHORE_ADMIN_PASSWORD: {{ .Values.anchoreGlobal.defaultAdminPassword | quote }}
