--- a/image/templates/kubernetes/helm/scannerv2chart/templates/api_service.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/api_service.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.appName }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.appName }}
+    app.kubernetes.io/name: stackrox
 spec:
   type: {{ .Values.anchoreApi.service.type }}
   ports:
