--- a/image/templates/kubernetes/helm/scannerv2chart/templates/postgres_deployment.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/postgres_deployment.yaml
@@ -2,8 +2,10 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: {{ .Values.dbAppName }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.dbAppName }}
+    app.kubernetes.io/name: stackrox
 spec:
   selector:
     matchLabels:
