--- a/image/templates/kubernetes/helm/scannerv2chart/templates/postgres_secrets.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/postgres_secrets.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.dbAppName }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.dbAppName }}
+    app.kubernetes.io/name: stackrox
 type: Opaque
 data:
   postgres-password:  {{ .Values.postgresql.postgresPassword | b64enc | quote }}
