--- a/image/templates/kubernetes/helm/scannerv2chart/templates/postgres_svc.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/postgres_svc.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.dbAppName }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.dbAppName }}
+    app.kubernetes.io/name: stackrox
 spec:
   type: {{ .Values.postgresql.service.type }}
   ports:
