Add (hidden) roxctl flags to deploy Anchore (stackrox/rox#2924)
* Add new roxctl flags that enable Scanner V2. Mark them hidden.
* Conditionally deploy Scanner V2 if the flag is passed.
* Pass in the Scanner V2 image and DB image from the command line.
* Add READMEs and setup scripts for the image pull secrets.
* Create service accounts for the Scanner V2 and Scanner V2 DB deployments
* Add support in the deploy scripts (export SCANNER_V2_SUPPORT=true)

--- a/image/templates/kubernetes/helm/scannerv2chart/Chart.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/Chart.yaml
@@ -1,7 +1,6 @@
 name: scanner-v2
 description: StackRox Scanner V2
-# TODO(viswa): Pipe this in
-version: 1
+version: {{ .Version }}
 maintainers:
  - name: stackrox
    email: support@stackrox.com
