--- a/image/templates/kubernetes/helm/scannerv2chart/templates/db_deployment.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/db_deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: {{ .Values.dbAppName }}
-  namespace: {{ .Values.namespace }}
+  namespace: stackrox
   labels:
     app: {{ .Values.dbAppName }}
     app.kubernetes.io/name: stackrox
@@ -63,6 +63,7 @@ spec:
         - name: data
           mountPath: {{ .Values.postgresql.persistence.mountPath }}
           subPath: {{ .Values.postgresql.persistence.subPath }}
+      serviceAccount: {{ .Values.dbAppName }}
       volumes:
       - name: data
       {{- if .Values.postgresql.persistence.enabled }}
