--- a/image/templates/kubernetes/helm/scannerv2chart/templates/db_pvc.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/db_pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ .Values.dbAppName }}
-  namespace: {{ .Values.namespace }}
+  namespace: stackrox
   labels:
     app: {{ .Values.dbAppName }}
     app.kubernetes.io/name: stackrox
