--- a/image/templates/kubernetes/helm/scannerv2chart/templates/db_svc.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/db_svc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.dbAppName }}
-  namespace: {{ .Values.namespace }}
+  namespace: stackrox
   labels:
     app: {{ .Values.dbAppName }}
     app.kubernetes.io/name: stackrox
