--- a/image/templates/kubernetes/helm/scannerv2chart/templates/engine_configmap.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/engine_configmap.yaml
@@ -2,7 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: {{ .Values.appName }}
-  namespace: {{ .Values.namespace }}
+  namespace: stackrox
   labels:
     app: {{ .Values.appName }}
     app.kubernetes.io/name: stackrox
