--- a/image/templates/kubernetes/helm/scannerv2chart/templates/secrets.yaml
+++ b/image/templates/kubernetes/helm/scannerv2chart/templates/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.appName }}
-  namespace: {{ .Values.namespace }}
+  namespace: stackrox
   labels:
     app: {{ .Values.appName }}
     app.kubernetes.io/name: stackrox
