[webhookserver] Add debug information on failure (stackrox/rox#2963)

--- a/webhookserver/server.yaml
+++ b/webhookserver/server.yaml
@@ -45,6 +45,8 @@ kind: Service
 metadata:
   name: webhookserver
   namespace: stackrox
+  labels:
+    app: webhookserver
 spec:
   ports:
   - name: "nontls"
